[gd_scene load_steps=11 format=3 uid="uid://dh8nw86crghl0"]

[ext_resource type="Script" path="res://Dungeon2/d_2_level_1.gd" id="1_mwujb"]
[ext_resource type="PackedScene" uid="uid://bv13n5lwnexij" path="res://Tile_Map_Samples.tscn" id="2_050kc"]
[ext_resource type="PackedScene" uid="uid://ct5okf6whlhaa" path="res://accesories.tscn" id="3_j1pmd"]
[ext_resource type="PackedScene" uid="uid://btokh1a8jjkbt" path="res://doors.tscn" id="4_kvxua"]
[ext_resource type="PackedScene" uid="uid://bvoupvxmm6q3d" path="res://DungeonBrian.tscn" id="5_uxpgj"]
[ext_resource type="PackedScene" uid="uid://3ffds0dptb7i" path="res://Dungeon2/cutscene.tscn" id="6_ry15o"]
[ext_resource type="PackedScene" uid="uid://brcaorg6ybupl" path="res://melee_mob.tscn" id="7_4ui1v"]
[ext_resource type="PackedScene" uid="uid://c5hj7gomfnn7a" path="res://enemy.tscn" id="7_jdc1f"]
[ext_resource type="PackedScene" uid="uid://daqwl7u78d52j" path="res://ranged_enemy.tscn" id="8_hrdpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0476"]
size = Vector2(2011, 1269.5)

[node name="D2 Level 1" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_mwujb")

[node name="TileMap" parent="." instance=ExtResource("2_050kc")]
layer_0/tile_data = PackedInt32Array(720914, 6, 0, 1114142, 6, 0, 1507370, 65542, 0, 1900598, 131078, 0, 2293826, 131078, 0, 1900622, 131078, 0, 1507418, 131078, 0, 1114214, 131078, 0, 721010, 131078, 0, 1507394, 131078, 0, 1114190, 65542, 0, 1114166, 65542, 0, 720986, 65542, 0, 327782, 65542, 0, 720962, 65542, 0, 327758, 6, 0, -65446, 6, 0, 720938, 6, 268435456, 327734, 6, 0, -65470, 6, 0, 65560, 65536, 0, 65572, 0, 0, -327632, 0, 0, -720836, 0, 0, -720824, 196608, 0, -720812, 0, 0, -720800, 65536, 0, -327572, 65536, 0, 65656, 65540, 0, 65548, 4, 0)

[node name="Accesories" parent="." instance=ExtResource("3_j1pmd")]
scale = Vector2(1, 1.00939)
layer_0/tile_data = PackedInt32Array(-786366, 6, 0, -720806, 6, 0, 327712, 6, 0, 43, 131078, 0, -393161, 196614, 0, -393115, 196614, 0, 65554, 65542, 0, -327631, 10, 0, -720800, 65547, 0, -655300, 11, 0, -327572, 65546, 0, -327598, 131080, 0, 1900599, 65544, 0, 524303, 1, 0)

[node name="NEXTLEEVL" parent="." instance=ExtResource("4_kvxua")]
layer_0/tile_data = PackedInt32Array(131192, 196610, 0)

[node name="Door" parent="." instance=ExtResource("4_kvxua")]
layer_0/tile_data = PackedInt32Array(131192, 196610, 0, 131084, 131074, 0)

[node name="DungeonBrian" parent="." instance=ExtResource("5_uxpgj")]
y_sort_enabled = true
position = Vector2(301, 191)
scale = Vector2(0.5, 0.5)

[node name="CUTSCENE2" parent="DungeonBrian" instance=ExtResource("6_ry15o")]
visible = false

[node name="MobDetector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MobDetector"]
position = Vector2(856, 372)
shape = SubResource("RectangleShape2D_p0476")

[node name="MeleeMob" parent="." instance=ExtResource("7_4ui1v")]
position = Vector2(1164.5, 111)
scale = Vector2(1.5, 1.5)

[node name="MeleeMob2" parent="." instance=ExtResource("7_4ui1v")]
position = Vector2(1247, 258)
scale = Vector2(1.5, 1.5)

[node name="MeleeMob3" parent="." instance=ExtResource("7_4ui1v")]
position = Vector2(991, 32)
scale = Vector2(1.5, 1.5)

[node name="MeleeMob4" parent="." instance=ExtResource("7_4ui1v")]
position = Vector2(1557, 285)
scale = Vector2(1.5, 1.5)

[node name="Enemy7" parent="." instance=ExtResource("7_jdc1f")]
position = Vector2(1167, 111)

[node name="Enemy8" parent="." instance=ExtResource("7_jdc1f")]
position = Vector2(1727, 125)

[node name="Enemy9" parent="." instance=ExtResource("7_jdc1f")]
position = Vector2(1715, 254)

[node name="Enemy10" parent="." instance=ExtResource("7_jdc1f")]
position = Vector2(1506, -25)

[node name="Ranged_enemy2" parent="." instance=ExtResource("8_hrdpx")]
position = Vector2(1854, 179)

[node name="Ranged_enemy4" parent="." instance=ExtResource("8_hrdpx")]
position = Vector2(1684, 87)

[node name="Ranged_enemy3" parent="." instance=ExtResource("8_hrdpx")]
position = Vector2(1130, 531)

[node name="Ranged_enemy5" parent="." instance=ExtResource("8_hrdpx")]
position = Vector2(1425, 173)

[node name="SceneFade" type="Timer" parent="."]
wait_time = 0.4

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D"]
polygon = PackedVector2Array(101, 173, 1068, 643, 2014, 155, 1997, 648, 635, 826)

[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="SceneFade" to="." method="_on_scene_fade_timeout"]
